# pm-os

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pm-os-cross-runtime-plan.md  pm-os-fix-pass-1.md  pm-os-ingest-plan.md  pm-os-modes-and-handoff-plan.md  pm-os-spec.md  pyproject.toml
.github/workflows/: tests.yml  version-bump.yml
collateral/: .gitignore  PM-OS-Business-Overview.pptx  PM-OS-Technical-Brief.docx  PM-OS-Technical-Walkthrough.pptx  README.md
context/: README.md  context.yaml
context.example/: README.md  context.yaml
context.example/global/: guardrails.md
context/global/: company.md  glossary.md  team.md
docs/: BACKLOG.md  PM-OS-CURRENT-STATE-REVIEW.md  PM-OS-SOP.md  PM-OS-demo.pptx  README.md  TELEMETRY-FIX-PLAN.md  TESTING.md  build_deck.js  email-draft.md  run-of-show.md
docs/guides/: sop.md  (+4 more)
hooks/: post-approve.py  pre-stage.py
lib/: artifact_contracts.py  config.py  consistency.py  context.py  frontmatter.py  git_sync.py  hashing.py  html_render.py  jira_markup.py  project.py  telemetry.py  text_metrics.py  traceability.py
scripts/: discover_tracking_context.py  pm_approve.py  pm_check.py  pm_context_import.py  pm_feedback.py  pm_handoff.py  pm_new.py  pm_os_install.py  pm_os_package.sh  pm_os_update.py  pm_os_verify.py  pm_share.py  pm_status.py  pm_sync.py  pm_trace.py  pm_validate_artifact.py
templates/: artifact-frontmatter.yaml.j2  design-spec.html.j2  handoff-story.md.j2  meta.yaml.j2  prototype-mockup.html.j2
tests/: conftest.py  helpers.py  test_harness_smoke.py
(+129 files in other folders)
